2008-02-18  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/tools/draw*.*: Insert Smiles is now undo-able.

2008-02-18  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/engines/orbitalengine.*,
	libavogadro/src/engines/orbitalsettingswidget.ui: Used Geoff's new
	colour widget in the configuration dialog. Added support for drawing
	both the positive and negative iso surfaces as well as ensuring the
	surfaces are only recalculated if the molecule was modified.

2008-02-17  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* avogadro/src/addenginedialog.*: Set the default "name" when
	adding an engine to the engine type. (This saves some typing.)

	* libavogadro/src/tools/drawtool.*, libavogadro/src/tools/drawcommand.*:
	Indentation and comment cleanup in draw tool. Added initial
	support for adjusting hydrogens while drawing.

2008-02-17  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/tools/drawtools.*, libavogadro/tools/drawcommand.*:
	Added small feature: when you left click a bond, the bond order is
	changed from 1->2, 2->3 and 3->1.
	This is can be undone, also made change element undo-able.

2008-02-15  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/engines/iso.*: Moved VDWSurface to IsoGen. This
	makes the surface engine much more interactive. Also added a type
	parameter to the init function to set the surface type:
	VDWsurfaceType, OrbitalType, ...
	Small changes to VDWSurface to ensure only the primitives set for the
	engine are included in the surface.

	* libavogadro/src/engines/surfaceengine.*: Same as above + fix to set
	the opacity of RGB colored surfaces.
	
	* libavogadro/src/engines/orbitalengine.*: Comment out init() to make
	sure it still compiles.

2008-02-13  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* libavogadro/src/tools/skeletontree.cpp: Fix bug with
	bond-centric manipulate tool. Translations and rotations were not